# ml-template

./: .gitignore  README.md  pyproject.toml
notebooks/: hello.ipynb
src/: __init__.py
