[project]
name = "ml-template"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Mario Zechner", email = "contact@mariozechner.at" }]
readme = "README.md"
requires-python = ">= 3.12"
dependencies = [
    "numpy>=1.26.3",
    "jupyter>=1.1.1",
    "pandas>=2.2.3",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "torchaudio>=2.5.1",
    "transformers[torch]>=4.47.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ml_template"]

[tool.uv.sources]
torch = [
    { index = "torch-gpu", marker = "platform_system == 'Linux'" },
    { index = "torch-gpu", marker = "platform_system == 'Windows'" },
    { index = "torch-cpu", marker = "platform_system == 'Darwin'" },
]

[[tool.uv.index]]
name = "torch-gpu"
url = "https://download.pytorch.org/whl/cu124"

[[tool.uv.index]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
